tests/should_fail/trait_item_types_mismatch.stderr
error: Expected implementation of trait `Trusted` for `()` to be marked as `#[trusted]`
 --> trait_item_types_mismatch.rs:7:1
  |
7 | impl Trusted for () {}
  | ^^^^^^^^^^^^^^^^^^^

error: Expected `my_predicate` to be a logic function as specified by the trait declaration
  --> trait_item_types_mismatch.rs:17:5
   |
17 |     fn my_predicate() -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

